--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 !*/cache/index.html
 !*/cache/.htaccess
 
+user_guide/*
 user_guide_src/build/*
 user_guide_src/cilexer/build/*
 user_guide_src/cilexer/dist/*
