invoice, products and sales changes

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@
 !*/cache/index.html
 !*/cache/.htaccess
 
+#server specific
+application/config/config.php
+application/config/database.php
+
 user_guide/*
 user_guide_src/build/*
 user_guide_src/cilexer/build/*
@@ -13,6 +17,7 @@ user_guide_src/cilexer/dist/*
 user_guide_src/cilexer/pycilexer.egg-info/*
 
 # NetBeans specific
+nbproject/*
 nbproject/private/
 build/
 nbbuild/
